--- a/style.css
+++ b/style.css
@@ -72,13 +72,15 @@ footer{
 
     nav{
     grid-column:1/2;
-    grid-row: 2/4;
-    
+    grid-row: 2/5;
+    padding-bottom: 600px;
+    margin-top: 100px;
     }
 
     main{
     grid-column:2/3;
     grid-row: 2/5;
+    margin-top: 150px;
     }
 
     footer{
