--- a/style.css
+++ b/style.css
@@ -88,4 +88,21 @@ footer{
     grid-row: 5/6;
     }
 }
+@media only screen and (min-width:1008px) {
 
+body{
+display: grid;
+grid-template-columns:10% 90% ;
+grid-template-rows:20% 60% 20% ;
+}
+header{
+grid-column: 1/3;
+grid-row: 1/2;
+}
+
+nav{
+grid-column: 1/2;
+grid-row: 2/3;
+}
+
+}
